Дело не в варнингах. Делаем дебаг