@@ -8,8 +8,9 @@ RUN apt install maven -y
 RUN apt install tomcat9 -y
 EXPOSE 8080
 RUN git clone https://github.com/boxfuse/boxfuse-sample-java-war-hello.git
-RUN cd boxfuse-sample-java-war-hello
-RUN mvn package --illegal-access=warn
-RUN cd target
-RUN cp hello-1.0.war /var/lib/tomcat9/webapps/
+RUN cd boxfuse-sample-java-war-hello/
+RUN ls -la
+#RUN mvn package
+#RUN cd target
+#RUN cp hello-1.0.war /var/lib/tomcat9/webapps/
 CMD ["/bin/bash"]
